fixes banner contrast in dark mode w/o overlay

--- a/source/_patterns/02-molecules/banner/_banner.scss
+++ b/source/_patterns/02-molecules/banner/_banner.scss
@@ -24,6 +24,31 @@
   }
 }
 
+.dark-mode {
+  .block--banner {
+    color: $black;
+
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      color: $dark-blue;
+    }
+
+    a:not([class]) {
+      color: $link-blue--darker;
+
+      &:hover,
+      &:focus,
+      &:active {
+        color: $lightest-green;
+      }
+    }
+  }
+}
+
 /* Retrofit for existing pages with beyond basic block banners */
 .block--half-page,
 .block--full-page {
